fix: avoid aligning right elements

--- a/public/styles.css
+++ b/public/styles.css
@@ -97,3 +97,7 @@
 .hide {
   display: none;
 }
+
+.center {
+  text-align: center !important;
+}
